WIP whole-trench fluorescence traces. GGot trace extraction and plotting working.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
@@ -142,6 +142,7 @@
     "store = zarr.DirectoryStore(\n",
     "    \"/home/jqs1/scratch/fidelity/180227/txnerr_timelapse_bf.zarr\"\n",
     ")\n",
+    "# store = zarr.DirectoryStore('/home/jqs1/scratch/fidelity/180226/txnerr_timelapse.zarr')\n",
     "root_group = zarr.open_group(store=store)"
    ]
   },
@@ -1775,7 +1776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(tr)"
+    "len(trench_points[1][0])"
    ]
   },
   {
@@ -1869,6 +1870,198 @@
    "source": [
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(segment_trench(thumbs[5], threshold=0.0005))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trench fluorescence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_lim, y_lim = get_img_limits(root_group[\"raw\"][0].shape[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(root_group[\"raw\"][0][2, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img > np.percentile(img, 90) / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(trench_points_pos[0][1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = {1: pd.DataFrame({\"a\": [1, 2, 3]})}\n",
+    "pd.concat(obj, axis=1, names=[\"trench_set_idx\", \"trench_idx\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trenchwise_apply(img_stack, trench_set_points, trench_idx, func):\n",
+    "    x_lim, y_lim = get_img_limits(img_stack.shape[2:])\n",
+    "    ul, lr = get_trench_bbox(trench_set_points, trench_idx, x_lim, y_lim)\n",
+    "    thumb_stack = img_stack[:, :, ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "    res = func(thumb_stack)\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def trenchwise_map(img_stack, trench_points, func, progress_bar=tqdm_auto):\n",
+    "    obj = {\n",
+    "        trench_set_idx: pd.concat(\n",
+    "            {\n",
+    "                trench_idx: trenchwise_apply(\n",
+    "                    img_stack, trench_set_points, trench_idx, func\n",
+    "                )\n",
+    "                for trench_idx in progress_bar(range(len(trench_set_points[0])))\n",
+    "            },\n",
+    "            axis=1,\n",
+    "        )\n",
+    "        for trench_set_idx, trench_set_points in progress_bar(trench_points.items())\n",
+    "    }\n",
+    "    df = pd.concat(obj, axis=1)\n",
+    "    df.columns.set_names(\"trench_set_idx\", level=0, inplace=True)\n",
+    "    df.columns.set_names(\"trench_idx\", level=1, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def f(img_stack):\n",
+    "    return pd.Series(np.percentile(img_stack[2], 90, axis=(1, 2)))\n",
+    "\n",
+    "\n",
+    "pos = 0\n",
+    "a = trenchwise_map(root_group[\"raw\"][pos], trench_points_pos[pos], f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.models.tools import HoverTool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hover = HoverTool(\n",
+    "    tooltips=[\n",
+    "        (\"(x,y)\", \"(@x, @y)\"),\n",
+    "        (\"label\", \"@label\"),\n",
+    "    ]\n",
+    ")\n",
+    "hv.Overlay.from_values(\n",
+    "    [\n",
+    "        hv.Curve(d.values, label=str(col)).opts(plot={\"tools\": [hover]})\n",
+    "        for col, d in islice(a.iteritems(), 1)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(a.reset_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 0\n",
+    "trench_idx = 18\n",
+    "trench_set_idx = 1\n",
+    "trench_points = trench_points_pos[pos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
+    "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
+    "thumbs = root_group[\"raw\"][pos][1, :, ul[1] : lr[1], ul[0] : lr[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.percentile(thumbs, 90, axis=(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thumbs.shape"
    ]
   },
   {
