--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
@@ -1950,20 +1950,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def trenchwise_apply(img_stack, trench_set_points, trench_idx, func):\n",
+    "def trenchwise_apply(\n",
+    "    img_stack,\n",
+    "    trench_set_points,\n",
+    "    trench_idx,\n",
+    "    func,\n",
+    "    channel_slice=slice(None, None, None),\n",
+    "    time_slice=slice(None, None, None),\n",
+    "):\n",
     "    x_lim, y_lim = get_img_limits(img_stack.shape[2:])\n",
     "    ul, lr = get_trench_bbox(trench_set_points, trench_idx, x_lim, y_lim)\n",
-    "    thumb_stack = img_stack[:, :, ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "    thumb_stack = img_stack[channel_slice, time_slice, ul[1] : lr[1], ul[0] : lr[0]]\n",
     "    res = func(thumb_stack)\n",
     "    return res\n",
     "\n",
     "\n",
-    "def trenchwise_map(img_stack, trench_points, func, progress_bar=tqdm_auto):\n",
+    "def trenchwise_map(img_stack, trench_points, func, progress_bar=tqdm_auto, **kwargs):\n",
     "    obj = {\n",
     "        trench_set_idx: pd.concat(\n",
     "            {\n",
     "                trench_idx: trenchwise_apply(\n",
-    "                    img_stack, trench_set_points, trench_idx, func\n",
+    "                    img_stack, trench_set_points, trench_idx, func, **kwargs\n",
     "                )\n",
     "                for trench_idx in progress_bar(range(len(trench_set_points[0])))\n",
     "            },\n",
@@ -1974,15 +1981,95 @@
     "    df = pd.concat(obj, axis=1)\n",
     "    df.columns.set_names(\"trench_set_idx\", level=0, inplace=True)\n",
     "    df.columns.set_names(\"trench_idx\", level=1, inplace=True)\n",
-    "    return df\n",
-    "\n",
-    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def f(img_stack):\n",
-    "    return pd.Series(np.percentile(img_stack[2], 90, axis=(1, 2)))\n",
+    "    return pd.Series(np.percentile(img_stack, 90, axis=(1, 2)))\n",
     "\n",
     "\n",
     "pos = 0\n",
-    "a = trenchwise_map(root_group[\"raw\"][pos], trench_points_pos[pos], f)"
+    "trench_traces = trenchwise_map(\n",
+    "    root_group[\"raw\"][pos], trench_points_pos[pos], f, channel_slice=2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hover_image(img, hover):\n",
+    "    return img * hv.QuadMesh(img).opts(plot={\"tools\": [hover]})\n",
+    "\n",
+    "\n",
+    "def show_trench_movie(\n",
+    "    img_stack,\n",
+    "    trench_points,\n",
+    "    trench_set_idx,\n",
+    "    trench_idx,\n",
+    "    channels=None,\n",
+    "    time_slice=slice(None, None, None),\n",
+    "):\n",
+    "    if channels is None:\n",
+    "        channels = range(img_stack.shape[0])\n",
+    "    hover = HoverTool(\n",
+    "        tooltips=[\n",
+    "            (\"(t,f)\", \"(@t, @intensity)\"),\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    def func(img_stack):\n",
+    "        height, width = img_stack.shape[2:]\n",
+    "        return hv.HoloMap(\n",
+    "            {\n",
+    "                t: hv.Layout.from_values(\n",
+    "                    [\n",
+    "                        hover_image(\n",
+    "                            RevImage(img_stack[channel, t], vdims=[\"intensity\"]), hover\n",
+    "                        )\n",
+    "                        for channel in channels\n",
+    "                    ]\n",
+    "                ).opts(\n",
+    "                    plot={\n",
+    "                        \"Image\": {\"height\": height * 2, \"width\": width * 5},\n",
+    "                        \"Layout\": {\"normalize\": False},\n",
+    "                    }\n",
+    "                )\n",
+    "                for t in range(img_stack.shape[1])\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    return trenchwise_apply(\n",
+    "        img_stack,\n",
+    "        trench_points[trench_set_idx],\n",
+    "        trench_idx,\n",
+    "        func,\n",
+    "        time_slice=time_slice,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_trench_movie(\n",
+    "    root_group[\"raw\"][pos],\n",
+    "    trench_points_pos[pos],\n",
+    "    2,\n",
+    "    12,\n",
+    "    channels=[0, 1, 2],\n",
+    "    time_slice=slice(1),\n",
+    ")"
    ]
   },
   {
@@ -2002,66 +2089,26 @@
    "source": [
     "hover = HoverTool(\n",
     "    tooltips=[\n",
-    "        (\"(x,y)\", \"(@x, @y)\"),\n",
+    "        (\"(t,f)\", \"(@time, @fluorescence)\"),\n",
     "        (\"label\", \"@label\"),\n",
     "    ]\n",
     ")\n",
     "hv.Overlay.from_values(\n",
     "    [\n",
-    "        hv.Curve(d.values, label=str(col)).opts(plot={\"tools\": [hover]})\n",
-    "        for col, d in islice(a.iteritems(), 1)\n",
+    "        hv.Curve(\n",
+    "            pd.DataFrame(\n",
+    "                {\n",
+    "                    \"time\": d.index,\n",
+    "                    \"fluorescence\": d.values,\n",
+    "                    \"label\": \"{}.{}\".format(*col),\n",
+    "                }\n",
+    "            ),\n",
+    "            vdims=[\"fluorescence\", \"label\"],\n",
+    "            kdims=[\"time\"],\n",
+    "        ).opts(plot={\"tools\": [hover]})\n",
+    "        for col, d in islice(a.iteritems(), 100)\n",
     "    ]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(a.reset_index())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos = 0\n",
-    "trench_idx = 18\n",
-    "trench_set_idx = 1\n",
-    "trench_points = trench_points_pos[pos]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
-    "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
-    "thumbs = root_group[\"raw\"][pos][1, :, ul[1] : lr[1], ul[0] : lr[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.percentile(thumbs, 90, axis=(1, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "thumbs.shape"
    ]
   },
   {
