Utility functions for dealing with diagnostics dicts.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180326 Prototyping.ipynb
@@ -1950,22 +1950,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "root_group[\"raw\"][0][2, :, :, :].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def trenchwise_apply(\n",
     "    img_stack,\n",
     "    trench_set_points,\n",
     "    trench_idx,\n",
     "    func,\n",
-    "    channel_slice=slice(None, None, None),\n",
-    "    time_slice=slice(None, None, None),\n",
+    "    channel_slice=slice(None),\n",
+    "    time_slice=slice(None),\n",
     "):\n",
-    "    x_lim, y_lim = get_img_limits(img_stack.shape[2:])\n",
+    "    x_lim, y_lim = get_img_limits(img_stack.shape[-2:])\n",
     "    ul, lr = get_trench_bbox(trench_set_points, trench_idx, x_lim, y_lim)\n",
-    "    thumb_stack = img_stack[channel_slice, time_slice, ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "    if len(img_stack.shape) == 4:\n",
+    "        thumb_stack = img_stack[channel_slice, time_slice, ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "    else:\n",
+    "        thumb_stack = img_stack[..., ul[1] : lr[1], ul[0] : lr[0]]\n",
     "    res = func(thumb_stack)\n",
     "    return res\n",
     "\n",
     "\n",
-    "def trenchwise_map(img_stack, trench_points, func, progress_bar=tqdm_auto, **kwargs):\n",
+    "def trenchwise_map(\n",
+    "    img_stack, trench_points, func, progress_bar=tqdm_auto, preload=True, **kwargs\n",
+    "):\n",
+    "    if preload:\n",
+    "        img_stack = img_stack[\n",
+    "            kwargs.get(\"channel_slice\", slice(None)),\n",
+    "            kwargs.get(\"time_slice\", slice(None)),\n",
+    "            :,\n",
+    "            :,\n",
+    "        ]\n",
+    "        del kwargs[\"channel_slice\"]\n",
+    "        del kwargs[\"time_slice\"]\n",
     "    obj = {\n",
     "        trench_set_idx: pd.concat(\n",
     "            {\n",
@@ -2006,8 +2030,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FROM: http://holoviews.org/reference/elements/bokeh/QuadMesh.html\n",
     "def hover_image(img, hover):\n",
-    "    return img * hv.QuadMesh(img).opts(plot={\"tools\": [hover]})\n",
+    "    return img * hv.QuadMesh(img).opts(\n",
+    "        plot={\"tools\": [hover]},\n",
+    "        style={\"alpha\": 0, \"hover_line_alpha\": 1, \"hover_line_color\": \"black\"},\n",
+    "    )\n",
     "\n",
     "\n",
     "def show_trench_movie(\n",
@@ -2020,11 +2048,7 @@
     "):\n",
     "    if channels is None:\n",
     "        channels = range(img_stack.shape[0])\n",
-    "    hover = HoverTool(\n",
-    "        tooltips=[\n",
-    "            (\"(t,f)\", \"(@t, @intensity)\"),\n",
-    "        ]\n",
-    "    )\n",
+    "    hover = HoverTool(tooltips=[(\"(x,y)\", \"(@x{0.0}, @y{0.0})\"), (\"intensity\", \"@z\")])\n",
     "\n",
     "    def func(img_stack):\n",
     "        height, width = img_stack.shape[2:]\n",
@@ -2033,7 +2057,12 @@
     "                t: hv.Layout.from_values(\n",
     "                    [\n",
     "                        hover_image(\n",
-    "                            RevImage(img_stack[channel, t], vdims=[\"intensity\"]), hover\n",
+    "                            RevImage(\n",
+    "                                img_stack[channel, t],\n",
+    "                                kdims=[\"x\", \"y\"],\n",
+    "                                vdims=[\"intensity\"],\n",
+    "                            ),\n",
+    "                            hover,\n",
     "                        )\n",
     "                        for channel in channels\n",
     "                    ]\n",
@@ -2062,14 +2091,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_trench_movie(\n",
-    "    root_group[\"raw\"][pos],\n",
-    "    trench_points_pos[pos],\n",
-    "    2,\n",
-    "    12,\n",
-    "    channels=[0, 1, 2],\n",
-    "    time_slice=slice(1),\n",
+    "def positionwise_trenchwise_map(\n",
+    "    img_group, trench_points_pos, func, positions=None, progress_bar=tqdm_auto, **kwargs\n",
+    "):\n",
+    "    if positions is None:\n",
+    "        positions = trench_points_pos.keys()\n",
+    "    obj = {\n",
+    "        pos: trenchwise_map(\n",
+    "            img_group[pos],\n",
+    "            trench_points_pos[pos],\n",
+    "            func,\n",
+    "            progress_bar=lambda x: x,\n",
+    "            **kwargs,\n",
+    "        )\n",
+    "        for pos in progress_bar(positions)\n",
+    "    }\n",
+    "    df = pd.concat(obj, axis=1)\n",
+    "    df.columns.set_names(\"position\", level=0, inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(img_stack):\n",
+    "    return pd.Series(np.percentile(img_stack, 95, axis=(1, 2)))\n",
+    "    # return pd.Series(np.max(img_stack, axis=(1,2)))\n",
+    "\n",
+    "\n",
+    "trench_traces_all = positionwise_trenchwise_map(\n",
+    "    root_group[\"raw\"],\n",
+    "    trench_points_pos,\n",
+    "    f,\n",
+    "    channel_slice=2,\n",
+    "    preload=True,\n",
+    "    time_slice=slice(None),\n",
+    "    positions=range(100),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%store trench_traces_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_traces_all"
    ]
   },
   {
@@ -2087,6 +2166,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hv.Histogram(np.histogram(trench_traces_all.mean(axis=0), bins=300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_traces_all.mean(axis=0) > 135"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bright_traces = trench_traces_all.loc[:, trench_traces_all.mean(axis=0) > 135]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bright_traces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=300\n",
+    "traces = bright_traces\n",
     "hover = HoverTool(\n",
     "    tooltips=[\n",
     "        (\"(t,f)\", \"(@time, @fluorescence)\"),\n",
@@ -2100,14 +2217,31 @@
     "                {\n",
     "                    \"time\": d.index,\n",
     "                    \"fluorescence\": d.values,\n",
-    "                    \"label\": \"{}.{}\".format(*col),\n",
+    "                    \"label\": \"{}.{}.{}\".format(*col),\n",
     "                }\n",
     "            ),\n",
     "            vdims=[\"fluorescence\", \"label\"],\n",
     "            kdims=[\"time\"],\n",
     "        ).opts(plot={\"tools\": [hover]})\n",
-    "        for col, d in islice(a.iteritems(), 100)\n",
+    "        for col, d in islice(traces.iteritems(), 100)\n",
     "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 0\n",
+    "show_trench_movie(\n",
+    "    root_group[\"raw\"][pos],\n",
+    "    trench_points_pos[pos],\n",
+    "    2,\n",
+    "    54,\n",
+    "    channels=[0, 1, 2],\n",
+    "    time_slice=slice(None),\n",
     ")"
    ]
   },
